- make sure that urpmi.cfg is world-readable (mga#9386)
- ensure gurpmi ProgressDialog centering (mga#19196)

Version 8.106 - 6 December 2016

- skip kernel-firmware-nonfree too when considering real kernels
  Thus preventing kernel-firmware-nonfree being falsely detected as an orphan
  package (mga#12361)

Version 8.105 - 20 October 2016

- adapt testsuite to rpm-4.13.0~rc2

Version 8.104 - 15 October 2016

- fix more Getopt::Long breakages (drop the "gnu_compat" option)

Version 8.103 - 11 July 2016

- fix reporting progress with newer aria2 (mga#16500)
- fix Getopt::Long 4.60+ breakages (mga#17923)
- s/suggests/recommends/ in bash completion

Version 8.102 - 14 April 2016

- add --deploops & --debug-librpm to bash completion
- unset LD_PRELOAD in chroot (eg: for eatmydata)
- use new "elem" callback
  (need URPM >= 5.07)

Version 8.101 - 9 October 2015

- prefer http mirrors when using a mirrorlist, this avoids selecting an rsync
  mirror which prevents aria2 from being used

Version 8.10 - 9 October 2015

- fix urpm::bug_report (mga#16925)

Version 8.09 - 4 September 2015

- fix urpm::parallel

Version 8.08 - 4 September 2015

- fix installing /sbin/*
  (regression with perl-5.22's ExtUtils-MakeMaker now wrapping $(...) )
- fix perl_checker checking

Version 8.07 - 3 September 2015

- aria2 downloading:
  o fix using a proxy without an auth user (mga#11265)
- library:
  o fix unmarking packages as potential orphans when downgrading (mga#16149)
  o fix Term::ReadKey warnings when output is redirected
- testsuite:
  o misc enhancements & cleanups
  o fix tests for ignored faillure for %pre{,un}, %pretrans
    (was ignored since rpm-4.9.0)
  o test that %pretrans do fail installtion (needs rpm-4.13)

Version 8.06 - 18 May 2015

- updated translations

Version 8.05 - 18 March 2015

- gurpmi:
  o install perl-Glib-Object-Introspection as priority upgrades prior to restart

Version 8.04 - 26 February 2015

- always display the right package name on errors (mga#15032)
