@@ -1,6 +1,7 @@
 #!/usr/bin/perl -T
 
 #- Copyright (C) 2005-2010 Mandriva SA
+#- Copyright (C) 2011-2017 Mageia
 
 use strict;
 use urpm::msg;
