@@ -356,6 +356,6 @@ Copyright (C) 2005 MandrakeSoft SA
 
 Copyright (C) 2005-2010 Mandriva SA
 
-Copyright (C) 2010-2015 Mageia
+Copyright (C) 2011-2017 Mageia
 
 =cut
