@@ -3,6 +3,7 @@
 
 #- Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004, 2005 MandrakeSoft SA
 #- Copyright (C) 2005-2010 Mandriva SA
+#- Copyright (C) 2011-2017 Mageia
 #-
 #- This program is free software; you can redistribute it and/or modify
 #- it under the terms of the GNU General Public License as published by
@@ -62,7 +63,7 @@ $ENV{HOME} ||= "/root";
 $ENV{USER} ||= "root";
 
 sub usage () {
-    print urpm::args::copyright('urpmi', [ '1999-2010', 'Mandriva' ], [ '2011-2013', 'Mageia' ])
+    print urpm::args::copyright('urpmi', [ '1999-2010', 'Mandriva' ], [ '2011-2017', 'Mageia' ])
    . N("  --help         - print this help message.
 ") . N("  --media        - use only the given media, separated by comma.
 ") . N("  --excludemedia - do not use the given media, separated by comma.
