@@ -3,6 +3,7 @@
 
 #- Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005 MandrakeSoft SA
 #- Copyright (C) 2005-2010 Mandriva SA
+#- Copyright (C) 2011-2017 Mageia
 #-
 #- This program is free software; you can redistribute it and/or modify
 #- it under the terms of the GNU General Public License as published by
@@ -36,7 +37,7 @@ our @names;
 our @src_names;
 
 sub usage() {
-    print urpm::args::copyright('urpmq', [ '2000-2010', 'Mandriva' ], [ '2012-2013', 'Mageia' ])
+    print urpm::args::copyright('urpmq', [ '2000-2010', 'Mandriva' ], [ '2011-2017', 'Mageia' ])
 	. N("  --help         - print this help message.
 ") . N("  --update       - use only update media.
 ") . N("  --media        - use only the given media, separated by comma.
