@@ -1,5 +1,6 @@
 - make sure that urpmi.cfg is world-readable (mga#9386)
 - ensure gurpmi ProgressDialog centering (mga#19196)
+- update Mageia copyright statements
 
 Version 8.106 - 6 December 2016
 
